--- a/SE/SEM3/MPR/backend/package.json
+++ b/SE/SEM3/MPR/backend/package.json
@@ -9,7 +9,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@nlpjs/nlp": "^4.27.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
@@ -19,8 +18,7 @@
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.3",
     "multer": "^1.4.5-lts.1",
-    "natural": "^6.7.2",
-    "node-nlp": "^4.27.0",
+    "nodemailer": "^6.9.6",
     "socket.io": "^4.7.2"
   }
 }
