--- a/SE/SEM3/MPR/backend/package.json
+++ b/SE/SEM3/MPR/backend/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^7.4.3",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.6",
-    "socket.io": "^4.7.2"
+    "socket.io": "^4.7.2",
+    "twilio": "^4.19.0"
   }
 }
