--- a/SE/SEM3/MPR/backend/package.json
+++ b/SE/SEM3/MPR/backend/package.json
@@ -4,7 +4,8 @@
   "description": "Backend for the messaging app using Node,Express,MongoDB ",
   "main": "index.js",
   "scripts": {
-    "dev": "node index.js"
+    "dev": "nodemon index.js",
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
@@ -15,7 +16,9 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "fast-two-sms": "^3.0.0",
     "jsonwebtoken": "^9.0.1",
+    "mongodb": "^6.3.0",
     "mongoose": "^7.4.3",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.6",
